--- a/views/admin/product-edit.ejs
+++ b/views/admin/product-edit.ejs
@@ -138,7 +138,7 @@
                 class="w-full px-4 py-3 border border-slate-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 text-gray-800 transition-all duration-200"
               >
                 <% for(let i = 0; i < cat.length; i++) { %>
-                  <option value="<%= cat[i].name %>" <%= product.category === cat[i].name ? 'selected' : '' %>><%= cat[i].name %></option>
+                  <option value="<%= cat[i]._id %>" <%= product.category.toString() === cat[i]._id.toString() ? 'selected' : '' %>><%= cat[i].name %></option>
                 <% } %>
               </select>
               <div id="category-error" class="error-message text-red-500 text-sm mt-1"></div>
