--- a/views/user/page-404.ejs
+++ b/views/user/page-404.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>404 - Page Not Found</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="/css/output.css">
   <link rel="stylesheet" href="./css/page-404.ccs">
 </head>
 <body class="flex items-center justify-center min-h-screen bg-gray-100">
