Fix hosting error: resolved deployment issue and environment configurations

--- a/views/user/about.ejs
+++ b/views/user/about.ejs
@@ -242,7 +242,7 @@
         Crafting beautiful furniture experiences across India. From our showrooms in Kochi and New Delhi to your home.
       </p>
       <div class="flex flex-col sm:flex-row gap-6 justify-center">
-        <a href="/products" class="btn-primary text-lg">
+        <a href="/shop" class="btn-primary text-lg">
           <i class="fas fa-shopping-bag mr-3"></i>
           Explore Collections
         </a>
@@ -608,7 +608,7 @@
         </div>
 
         <div class="text-center">
-          <a href="/contact" class="btn-primary text-lg">
+          <a href="/contactUs" class="btn-primary text-lg">
             <i class="fas fa-paper-plane mr-3"></i>
             Send Message
           </a>
@@ -627,7 +627,7 @@
             Explore our premium furniture collections and discover pieces that perfectly match your style and space.
           </p>
           <div class="flex flex-col sm:flex-row gap-6 justify-center">
-            <a href="/products" class="btn-primary bg-white text-gray-800 hover:bg-gray-100 text-lg">
+            <a href="/shop" class="btn-primary bg-white text-gray-800 hover:bg-gray-100 text-lg">
               <i class="fas fa-shopping-bag mr-3"></i>
               Shop Now
             </a>
