--- a/views/admin/adminSignin.ejs
+++ b/views/admin/adminSignin.ejs
@@ -50,12 +50,12 @@
       <label class="block text-sm font-medium text-gray-700">Password</label>
       <input type="password" id="password" name="password" required
         class="mt-1 w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-1 focus:ring-gray-400 focus:outline-none transition" />
-      <div class="text-right mt-1">
+      <!-- <div class="text-right mt-1">
         <button type="button" id="forgotPasswordBtn"
           class="text-sm text-gray-600 hover:text-gray-800 transition duration-200">
           Forgot Password?
         </button>
-      </div>
+      </div> -->
     </div>
     <div class="flex justify-center">
       <button type="submit"
